# biolang

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: claude.yml  pages.yml  release.yml
benchmarks/: README.md  download_data.py  download_large_test.py  generate_data.py  generate_large_test.py  run_all.ps1  run_all.sh  setup_python.ps1  setup_python.sh  setup_r.ps1  setup_r.sh
benchmarks/biolang/: 10_chr22_kmers.bl  1_fasta_stats.bl  2_fastq_qc.bl  3_kmer_count.bl  4_vcf_filter.bl  5_csv_wrangle.bl  6_genome_stats.bl  7_clinvar_filter.bl
benchmarks/correctness/: README.md  download_real_data.py  validate.ps1  validate.sh  validate_real.ps1  validate_real.sh
benchmarks/python/: 1_fasta_stats.py  3_kmer_count.py  4_vcf_filter.py  6_genome_stats.py  7_clinvar_filter.py  8_protein_kmers.py
benchmarks/r/: 10_chr22_kmers.R  3_kmer_count.R  5_csv_wrangle.R  6_genome_stats.R  8_protein_kmers.R  9_human_chr22.R
book/: README.md  book.toml
book/src/: SUMMARY.md  appendix-builtins.md  appendix-operators.md  ch01-getting-started.md  ch02-bio-literals.md  ch03-variables-types.md  ch04-collections-tables.md  ch05-pipes-transforms.md  ch06-functions-closures.md  ch07-control-flow.md  ch08-error-handling.md  ch09-file-io.md  ch10-intervals-variants.md  ch11-pipelines.md  ch12-nfcore.md  ch13-biocontainers.md  ch13b-galaxy.md  ch14-statistics-linalg.md  ch15-bio-apis.md  ch16-streams-scale.md  ch16b-sqlite-notifications.md  ch16c-knowledge-graphs.md  ch16d-pdb-enrichment.md  ch18-plugins.md  introduction.md
books/language/: book.toml
books/practical-bioinformatics/: build.ps1  build.sh
crates/bio-core/: Cargo.toml
crates/bio-core/src/: aligned_read.rs  alignment.rs  cluster_ops.rs  coord.rs  diffexpr_ops.rs  dimreduce_ops.rs  fastq_ops.rs  gene.rs  gff_ops.rs  graph_ops.rs  interval.rs  interval_ops.rs  kmer.rs  lib.rs  phylo_ops.rs  seq_ops.rs  sequence.rs  stats_ops.rs  vcf_ops.rs
crates/bio-core/tests/: aligned_read.rs  alignment.rs  cluster_ops.rs  coord.rs  diffexpr_ops.rs  dimreduce_ops.rs  fastq_ops.rs  gene.rs  gff_ops.rs  graph_ops.rs  interval_ops.rs  kmer.rs  phylo_ops.rs  seq_ops.rs  stats_ops.rs  vcf_ops.rs
crates/bl-apis/: Cargo.toml
crates/bl-apis/src/: biocontainers.rs  biomart.rs  client.rs  config.rs  cosmic.rs  ensembl.rs  error.rs  galaxy.rs  go.rs  kegg.rs  lib.rs  ncbi.rs  ncbi_datasets.rs  nfcore.rs  pdb.rs  reactome.rs  string_db.rs  ucsc.rs  uniprot.rs
crates/bl-apis/tests/: api_types_tests.rs
crates/bl-bio/: Cargo.toml
crates/bl-bio/src/: alignment.rs  intervals.rs  io.rs  lib.rs  sequence.rs
crates/bl-bio/tests/: alignment_tests.rs  interval_tests.rs  io_tests.rs  sequence_tests.rs
crates/bl-cli/: Cargo.toml
crates/bl-cli/src/: main.rs  notebook.rs  update.rs
crates/bl-compiler/: Cargo.toml
crates/bl-core/: Cargo.toml
crates/bl-jit/: Cargo.toml
crates/bl-jit/src/: builtins.rs  frame.rs  lib.rs  value_ops.rs  vm.rs
crates/bl-jit/tests/: vm_tests.rs
crates/bl-lexer/: Cargo.toml
crates/bl-lexer/src/: lexer.rs  token.rs
crates/bl-lexer/tests/: escape_tests.rs  lexer_tests.rs
crates/bl-lsp/: Cargo.toml
crates/bl-lsp/src/: analysis.rs  backend.rs  diagnostics.rs  main.rs
crates/bl-parser/: Cargo.toml
crates/bl-parser/src/: lib.rs  parser.rs
crates/bl-parser/tests/: parser_tests.rs
crates/bl-repl/: Cargo.toml
crates/bl-repl/src/: lib.rs
crates/bl-runtime/: Cargo.toml
crates/bl-runtime/src/: apis.rs  bio_ops.rs  bio_plots.rs  bio_wasm.rs  builtins.rs  checker.rs  compiled.rs  container.rs  csv.rs  datetime.rs  enrich.rs  env.rs  fs.rs  graph.rs  hash.rs  http.rs  interpreter.rs  json.rs  lib.rs  llm.rs  markdown.rs  matrix.rs  ncbi_wasm.rs  nf_parse.rs  notify.rs  package.rs  parquet.rs  plot.rs  plugins.rs  regex_ops.rs  seq.rs  sparse.rs  sqlite.rs  stats.rs  table_ops.rs  tempfiles.rs  text_ops.rs  transfer.rs  viz.rs
crates/bl-runtime/tests/: bio_plots_tests.rs  checker_tests.rs  construct_tests.rs  defaults_and_lambda_tests.rs  dispatch_tests.rs  enrich_tests.rs  fs_tests.rs  generator_tests.rs  interpreter_tests.rs  json_tests.rs  markdown_tests.rs  matrix_builtin_tests.rs  parallel_tests.rs  phase5_tests.rs  plot_tests.rs  regex_tests.rs  stats_tests.rs  text_ops_tests.rs  viz_tests.rs
crates/bl-wasm/: Cargo.toml
crates/bl-wasm/src/: lib.rs
examples/: bio.bl  fileio.bl  hello.bl  quickstart.bl  streams.bl  tables.bl
examples/apis/: biomart.bl  containers.bl  cosmic.bl  ensembl.bl  gene_ontology.bl  http_transfer.bl  kegg.bl  llm_chat.bl  multi_db_pipeline.bl  ncbi.bl  ncbi_datasets.bl  pdb.bl  reactome.bl  string_db.bl  ucsc.bl  uniprot.bl
examples/basics/: collections.bl  control_flow.bl  error_handling.bl  functions.bl  hello.bl  imports.bl  pipes.bl  strings.bl
examples/bio/: advanced_analytics.bl  annotations.bl  enrichment.bl  fasta_fastq.bl  genomic_intervals.bl  maf_analysis.bl  sequences.bl  sketching.bl  variants.bl
examples/data/: csv_tsv.bl  datetime.bl  filesystem.bl  json_ops.bl  matrices.bl  regex.bl  sparse_matrix.bl  statistics.bl  tables.bl  text_ops.bl
examples/pipelines/: genomic_regions.bl  qc_pipeline.bl  sequence_analysis.bl  variant_pipeline.bl
examples/research/: cancer_genomics.bl  clinical_wes.bl  crispr_screen.bl  epigenomics_chipseq.bl  gwas_analysis.bl  metagenomics_16s.bl  pharmacogenomics.bl  phylogenomics.bl  rnaseq_deseq.bl  single_cell_rnaseq.bl  test_eq_nl.bl  test_medium.bl  test_minimal.bl  test_size.bl  test_ternary.bl  test_tiny.bl  test_wes_a.bl  test_wes_addsort.bl  test_wes_api.bl  test_wes_b.bl  test_wes_bigtable.bl  (+14 more)
scripts/: build-books.sh  publish.sh
website/: 404.html  CNAME  benchmarks.html  biogist.html  books.html  browser.html  features.html  index.html  install.sh  manifest-biogist.json  manifest-repl.json  manifest-studio.json  manifest.json  package-lock.json  package.json  playground.html  privacy.html  repl.html  robots.txt  serve.json  sitemap.xml  studio.html  sw.js  tailwind.config.js  test.html  tools.html  tui.html  viewer.html  viewer.js
(+1188 files in other folders)
