[package]
name = "bio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core bioinformatics types: BioSequence, GenomicInterval, Variant, Gene"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
