[package]
name = "bl-bio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FASTA, FASTQ, BED, GFF, VCF I/O and sequence operations for BioLang"

[dependencies]
bio-core = { workspace = true }
bl-core = { workspace = true }
noodles-fasta = "0.60"
noodles-fastq = "0.22"
noodles-bam = "0.86"
noodles-bgzf = "0.46"
noodles-sam = "0.82"
flate2 = "1"
