[package]
name = "bl-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
bl-core = { workspace = true }
bl-lexer = { workspace = true }
bl-parser = { workspace = true }
bl-runtime = { workspace = true, features = ["native"] }
bl-repl = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[target.'cfg(windows)'.dependencies]
zip = "2"
