[package]
name = "bl-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bl-lsp"
path = "src/main.rs"

[dependencies]
bl-core = { workspace = true }
bl-lexer = { workspace = true }
bl-parser = { workspace = true }
bl-runtime = { workspace = true, features = ["native"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
