[package]
name = "bl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Recursive descent parser with Pratt expression parsing for BioLang"

[dependencies]
bl-core = { workspace = true }
bl-lexer = { workspace = true }
