[package]
name = "bl-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive REPL for BioLang with history and tab completion"

[dependencies]
bl-core = { workspace = true }
bl-lexer = { workspace = true }
bl-parser = { workspace = true }
bl-runtime = { workspace = true, features = ["native"] }
rustyline = "17"
serde_json = "1"
sha2 = "0.10"
